# Expo-TanstackDB-ElectricSQL

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README-zh.md  README.md  app.json  package.json
.claude/: settings.local.json
.claude/skills/pre-commit-review/: SKILL.md
.claude/skills/tanstack-db/: SKILL.md
.claude/skills/tanstack-db/references/: Electric Collection.md  Error Handling.md  LocalStorage Collection.md  Schema Validation and Type Transformations.md  TanStack DB Live Queries.md  TanStack DB Mutations.md  TanStack DB Overview.md
.claude/skills/tentap-editor/references/: customTheme.md  intro.md
backend/: .env.example  alembic.ini  pyproject.toml
backend/app/: alembic_runner.py  db.py  main.py  models.py
backend/docs/: alembic-pyproject-setup.md  complete-migration-guide-zh.md  complete-migration-guide.md
backend/migrations/: env.py
backend/migrations/versions/: 20251230_2355-b87ea0b6a211_initial_migration_create_todos_table.py  20260102_1508-bdfd26896509_add_diaries_table.py
docs/: Linus.md  SQLite-Offline-Storage.md  tentap-editor-persistence-guide.md
src/app/: _layout.tsx
src/app/(tabs)/: _layout.tsx  settings.tsx  todo.tsx
src/app/(tabs)/(diary)/: [id].tsx  _layout.tsx  index.tsx
src/app/(tabs)/chatbot/: index.tsx
src/app/api/: chat+api.ts
src/components/: MessageRenderer.tsx  glass-toolbar.tsx  tentap-editor.tsx  toolbar-buttons.ts  toolbar-types.ts
src/db/: schema.ts
src/utils/: api-client.ts  generateAPIUrl.ts
