[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "sqlalchemy>=2.0.45",
    "sqlmodel>=0.0.31",
    "uvicorn>=0.40.0",
]

[tool.alembic]
# 迁移脚本位置
script_location = "migrations"

# 文件命名模板（使用日期时间前缀）
file_template = "%%(year)d%%(month).2d%%(day).2d_%%(hour).2d%%(minute).2d-%%(rev)s_%%(slug)s"

# 额外的 sys.path
prepend_sys_path = ["."]

# 时区（Windows 上注释掉）
# timezone = "UTC"

# 输出编码
output_encoding = "utf-8"

# 自动代码格式化
[[tool.alembic.post_write_hooks]]
name = "black"
type = "console_scripts"
entrypoint = "black"
options = "-l 79 REVISION_SCRIPT_FILENAME"

[project.optional-dependencies]
dev = ["black>=24.0.0"]

[tool.black]
line-length = 79
target-version = ['py312']